import outdent from 'outdent';
import {getTester, parsers} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'const foo = 1 | 1;',
		'const foo = 0 | 1;',
		'const foo = 1.4 | +0;',
		'const foo = 1.4 | -0;',
		'const foo = 1.4 | (.5 - 0.5);',
		'const foo = 1.4 & 0xFFFFFFFF',
		'const foo = 1.4 & 0xFF',
		'const foo = 1.4 & 0x0',
		'const foo = 1.4 & 0',
		'const foo = ~3.9;',
		'const foo = 1.1 >> 1',
		'const foo = 0 << 1',
		outdent`
			let foo = 0;
			foo |= 1;
		`,
		outdent`
			let foo = 1.2; // comment 1
			foo |= 1; // comment 2 and 1.2 | 0
		`,
		'parseInt(value, 10);',
		'parseInt(String(value));',
		'parseInt(String(value), 16);',
		'Number.parseInt(String(value), 16);',
		'parseInt(String(value), "10");',
		'parseInt?.(String(value), 10);',
		'parseInt(String(...value), 10);',
		'Number.parseInt(String(...value), 10);',
		'parseInt(String(value), ...[10]);',
		'Number.parseInt(String(value), ...[10]);',
		'parseInt(String(value, extra), 10);',
		'parseInt(new String(value), 10);',
		'parseInt(String(value), 10, extra);',
		'Number.parseInt(String(value), 10, extra);',
		'Number.parseInt?.(String(value), 10);',
		'Number?.parseInt(String(value), 10);',
		'Number["parseInt"](String(value), 10);',
		'const parseInt = value => value; parseInt(String(value), 10);',
		'const Number = {parseInt() {}}; Number.parseInt(String(value), 10);',
		'const String = value => value; parseInt(String(value), 10);',
		'const String = value => value; Number.parseInt(String(value), 10);',
	],
	invalid: [
		// `parseInt(String(foo), 10)`
		'const foo = parseInt(String(number), 10);',
		'const foo = Number.parseInt(String(number), 10);',
		'const foo = parseInt(String((number)), 10);',
		'const foo = parseInt(String(number + 1), 10);',
		'const foo = parseInt(String(number,), 10);',
		'const foo = parseInt(String(/* comment */ number), 10);',
		'const foo = parseInt(String(number /* comment */), 10);',
		'const foo = parseInt(/* comment */ String(number), 10);',
		'const foo = parseInt(String /* comment */ (number), 10);',
		'const foo = parseInt(String(number), /* comment */ 10);',
		'const foo = parseInt(String((0, number)), 10);',
		{
			code: 'const foo = parseInt(String(number as number), 10);',
			languageOptions: {parser: parsers.typescript},
		},
		{
			code: 'const foo = parseInt(String<() => number>(number), 10);',
			languageOptions: {parser: parsers.typescript},
		},
		{
			code: 'const foo = parseInt(String(number!), 10);',
			languageOptions: {parser: parsers.typescript},
		},

		// Basic "bitwise OR with 0" case
		'const foo = 1.1 | 0;',
		'const foo = 111 | 0;',
		'const foo = (1 + 2 / 3.4) | 0;',
		'const foo = bar((1.4 | 0) + 2);',
		'const foo = (0, 1.4) | 0;',
		'function foo() {return.1 | 0;}',

		// Different "types" of 0
		'const foo = 1.4 | 0.;',
		'const foo = 1.4 | .0;',
		'const foo = 1.4 | 0.0000_0000_0000;',
		'const foo = 1.4 | 0b0;',
		'const foo = 1.4 | 0x0000_0000_0000;',
		'const foo = 1.4 | 0o0;',

		// Multiple bitwise OR
		'const foo = 1.23 | 0 | 4;',

		// Basic "bitwise NOT" case
		'const foo = ~~3.9;',
		'const foo = ~~111;',
		'const foo = ~~(1 + 2 / 3.4);',
		'const foo = ~~1 + 2 / 3.4;',
		'const foo = ~~(0, 1.4);',
		'const foo = ~~~10.01;',
		'const foo = ~~(~10.01);',
		'const foo = ~(~~10.01);',
		'const foo = ~~-10.01;',
		'const foo = ~~~~10.01;',
		'function foo() {return~~3.9;}',

		// Other operators
		'const foo = bar >> 0;',
		// Binary expression as the left operand of `>> 0`
		'const foo = (a + b) >> 0;',
		// `~~` of a TypeScript non-null assertion / conditional expression
		{code: 'const foo = ~~bar!;', languageOptions: {parser: parsers.typescript}},
		'const foo = ~~(a ? b : c);',
		'const foo = bar << 0;',
		'const foo = bar ^ 0;',
		'function foo() {return.1 ^0;}',

		// Case with objects (MemberExpression and ChainExpression)
		outdent`
			const foo = {a: {b: {c: 3}}};
			const bar = a.b.c | 0;
		`,
		outdent`
			const foo = {a: {b: {c: 3}}};
			const bar = a.b?.c | 0;
		`,
		outdent`
			const foo = {a: {b: {c: 3}}};
			const bar = ~~a.b?.c;
		`,
		// With a variable
		outdent`
			const foo = 3;
			const bar = foo | 0;
		`,
		outdent`
			const foo = 3;
			const bar = ~~foo;
		`,

		// With an AssignmentExpression
		outdent`
			let foo = 2;
			foo |= 0;
		`,
		outdent`
			const foo = {a: {b: 3.4}};
			foo.a.b |= 0;
		`,
		outdent`
			const foo = 10.01;
			const bar = ~~foo;
		`,
		outdent`
			let foo = 10.01;
			foo >>= 0;
		`,
		outdent`
			let foo = 10.01;
			foo <<= 0;
		`,
		outdent`
			let foo = 10.01;
			foo ^= 0;
		`,
		'function foo() {return[foo][0] ^= 0;};',

		// With comments
		'const foo = /* first comment */ 3.4 | 0; // A B C',
		'const foo = /* first comment */ ~~3.4; // A B C',
		outdent`
			const foo = {a: {b: 3.4}};
			foo /* Comment 1 */ .a /* Comment 2 */ . /* Comment 3 */ b |= /* Comment 4 */ 0 /* Comment 5 */;
		`,
		outdent`
			const foo = {a: {b: 3.4}};
			const bar = /* Comment 1 */ ~~ a /* Comment 3 */ . /* Comment 4 */ b /* Comment 5 */;
		`,
		'const foo = /* will keep */ 3.4 /* will remove 1 */ | /* will remove 2 */ 0;',
		'const foo = /* will keep */ ~ /* will remove 1 */ ~ /* will remove 2 */ 3.4;',
		outdent`
			const foo = 3.4; // comment 1
			foo |= 0; // comment 2
		`,
		outdent`
			const foo = 3.4; // comment 1
			const bar = ~~foo; // comment 2
		`,

		// Multiple errors
		'const foo = ~~bar | 0;',
		'const foo = ~~(bar| 0);',
		'const foo = bar | 0 | 0;',
		'const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);',

		// Left-hand side has side effect
		outdent`
			const foo = Array.from({length: 10}, (_, index) => (index + 1) + (index + 1) /100);
			let i = 0;
			while (i < foo.length) {
				foo[i++] |= 0;
			}
			console.log(foo);
		`,
	],
});

// The expression is rebuilt as the call argument, so a comment in it would be lost
test({
	valid: [],
	invalid: [
		{
			code: 'const foo = ~~(/* keep */ 1 + 2 / 3.4);',
			errors: [{messageId: 'error-bitwise-not', suggestions: []}],
		},
		{
			code: 'const foo = /* keep */ ~ /* drop */ ~ 3.4;',
			errors: [{messageId: 'error-bitwise-not', suggestions: []}],
		},
		{
			code: 'const foo = x /* keep */ << 0;',
			errors: [{messageId: 'error-bitwise', suggestions: []}],
		},
		{
			code: 'const foo = ~~(1 + 2 / 3.4);',
			errors: [
				{
					messageId: 'error-bitwise-not',
					suggestions: [
						{messageId: 'suggestion-bitwise-not', output: 'const foo = Math.trunc(1 + 2 / 3.4);'},
					],
				},
			],
		},
		// `~~` wraps through `ToInt32` where `Math.trunc` does not
		{
			code: 'const foo = ~~(2 ** 32);',
			errors: [
				{
					messageId: 'error-bitwise-not',
					suggestions: [
						{messageId: 'suggestion-bitwise-not', output: 'const foo = Math.trunc(2 ** 32);'},
					],
				},
			],
		},
		{
			code: 'const foo = x << 0;',
			errors: [
				{
					messageId: 'error-bitwise',
					suggestions: [
						{messageId: 'suggestion-bitwise', output: 'const foo = Math.trunc(x);'},
					],
				},
			],
		},
		{
			code: 'foo |= /* keep */ 0;',
			errors: [{messageId: 'error-bitwise', suggestions: []}],
		},
	],
});
