exports[`prefer-math-trunc > invalid(1): const foo = parseInt(String(number), 10); 1`] = `

  1 | const foo = parseInt(String(number), 10);

`;

exports[`prefer-math-trunc > invalid(1): const foo = parseInt(String(number), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String(number), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(number);

`;

exports[`prefer-math-trunc > invalid(10): const foo = parseInt(String(number), /* comment */ 10); 1`] = `

  1 | const foo = parseInt(String(number), /* comment */ 10);

`;

exports[`prefer-math-trunc > invalid(10): const foo = parseInt(String(number), /* comment */ 10); 2`] = `

Message:
> 1 | const foo = parseInt(String(number), /* comment */ 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

`;

exports[`prefer-math-trunc > invalid(11): const foo = parseInt(String((0, number)), 10); 1`] = `

  1 | const foo = parseInt(String((0, number)), 10);

`;

exports[`prefer-math-trunc > invalid(11): const foo = parseInt(String((0, number)), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String((0, number)), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc((0, number));

`;

exports[`prefer-math-trunc > invalid(12): const foo = parseInt(String(number as number), 10); 1`] = `

  1 | const foo = parseInt(String(number as number), 10);

`;

exports[`prefer-math-trunc > invalid(12): const foo = parseInt(String(number as number), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String(number as number), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(number as number);

`;

exports[`prefer-math-trunc > invalid(13): const foo = parseInt(String<() => number>(number), 10); 1`] = `

  1 | const foo = parseInt(String<() => number>(number), 10);

`;

exports[`prefer-math-trunc > invalid(13): const foo = parseInt(String<() => number>(number), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String<() => number>(number), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(number);

`;

exports[`prefer-math-trunc > invalid(14): const foo = parseInt(String(number!), 10); 1`] = `

  1 | const foo = parseInt(String(number!), 10);

`;

exports[`prefer-math-trunc > invalid(14): const foo = parseInt(String(number!), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String(number!), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(number!);

`;

exports[`prefer-math-trunc > invalid(15): const foo = 1.1 | 0; 1`] = `

  1 | const foo = 1.1 | 0;

`;

exports[`prefer-math-trunc > invalid(15): const foo = 1.1 | 0; 2`] = `

Message:
> 1 | const foo = 1.1 | 0;
    |             ^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1.1);

`;

exports[`prefer-math-trunc > invalid(16): const foo = 111 | 0; 1`] = `

  1 | const foo = 111 | 0;

`;

exports[`prefer-math-trunc > invalid(16): const foo = 111 | 0; 2`] = `

Message:
> 1 | const foo = 111 | 0;
    |             ^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(111);

`;

exports[`prefer-math-trunc > invalid(17): const foo = (1 + 2 / 3.4) | 0; 1`] = `

  1 | const foo = (1 + 2 / 3.4) | 0;

`;

exports[`prefer-math-trunc > invalid(17): const foo = (1 + 2 / 3.4) | 0; 2`] = `

Message:
> 1 | const foo = (1 + 2 / 3.4) | 0;
    |             ^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1 + 2 / 3.4);

`;

exports[`prefer-math-trunc > invalid(18): const foo = bar((1.4 | 0) + 2); 1`] = `

  1 | const foo = bar((1.4 | 0) + 2);

`;

exports[`prefer-math-trunc > invalid(18): const foo = bar((1.4 | 0) + 2); 2`] = `

Message:
> 1 | const foo = bar((1.4 | 0) + 2);
    |                  ^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = bar((Math.trunc(1.4)) + 2);

`;

exports[`prefer-math-trunc > invalid(19): const foo = (0, 1.4) | 0; 1`] = `

  1 | const foo = (0, 1.4) | 0;

`;

exports[`prefer-math-trunc > invalid(19): const foo = (0, 1.4) | 0; 2`] = `

Message:
> 1 | const foo = (0, 1.4) | 0;
    |             ^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc((0, 1.4));

`;

exports[`prefer-math-trunc > invalid(2): const foo = Number.parseInt(String(number), 10); 1`] = `

  1 | const foo = Number.parseInt(String(number), 10);

`;

exports[`prefer-math-trunc > invalid(2): const foo = Number.parseInt(String(number), 10); 2`] = `

Message:
> 1 | const foo = Number.parseInt(String(number), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`Number.parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`Number.parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(number);

`;

exports[`prefer-math-trunc > invalid(20): function foo() {return.1 | 0;} 1`] = `

  1 | function foo() {return.1 | 0;}

`;

exports[`prefer-math-trunc > invalid(20): function foo() {return.1 | 0;} 2`] = `

Message:
> 1 | function foo() {return.1 | 0;}
    |                       ^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | function foo() {return Math.trunc(.1);}

`;

exports[`prefer-math-trunc > invalid(21): const foo = 1.4 | 0.; 1`] = `

  1 | const foo = 1.4 | 0.;

`;

exports[`prefer-math-trunc > invalid(21): const foo = 1.4 | 0.; 2`] = `

Message:
> 1 | const foo = 1.4 | 0.;
    |             ^^^^^^^^ Use \`Math.trunc\` instead of \`| 0.\`.

Suggestion 1/1: Replace \`| 0.\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1.4);

`;

exports[`prefer-math-trunc > invalid(22): const foo = 1.4 | .0; 1`] = `

  1 | const foo = 1.4 | .0;

`;

exports[`prefer-math-trunc > invalid(22): const foo = 1.4 | .0; 2`] = `

Message:
> 1 | const foo = 1.4 | .0;
    |             ^^^^^^^^ Use \`Math.trunc\` instead of \`| .0\`.

Suggestion 1/1: Replace \`| .0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1.4);

`;

exports[`prefer-math-trunc > invalid(23): const foo = 1.4 | 0.0000_0000_0000; 1`] = `

  1 | const foo = 1.4 | 0.0000_0000_0000;

`;

exports[`prefer-math-trunc > invalid(23): const foo = 1.4 | 0.0000_0000_0000; 2`] = `

Message:
> 1 | const foo = 1.4 | 0.0000_0000_0000;
    |             ^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0.0000_0000_0000\`.

Suggestion 1/1: Replace \`| 0.0000_0000_0000\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1.4);

`;

exports[`prefer-math-trunc > invalid(24): const foo = 1.4 | 0b0; 1`] = `

  1 | const foo = 1.4 | 0b0;

`;

exports[`prefer-math-trunc > invalid(24): const foo = 1.4 | 0b0; 2`] = `

Message:
> 1 | const foo = 1.4 | 0b0;
    |             ^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0b0\`.

Suggestion 1/1: Replace \`| 0b0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1.4);

`;

exports[`prefer-math-trunc > invalid(25): const foo = 1.4 | 0x0000_0000_0000; 1`] = `

  1 | const foo = 1.4 | 0x0000_0000_0000;

`;

exports[`prefer-math-trunc > invalid(25): const foo = 1.4 | 0x0000_0000_0000; 2`] = `

Message:
> 1 | const foo = 1.4 | 0x0000_0000_0000;
    |             ^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0x0000_0000_0000\`.

Suggestion 1/1: Replace \`| 0x0000_0000_0000\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1.4);

`;

exports[`prefer-math-trunc > invalid(26): const foo = 1.4 | 0o0; 1`] = `

  1 | const foo = 1.4 | 0o0;

`;

exports[`prefer-math-trunc > invalid(26): const foo = 1.4 | 0o0; 2`] = `

Message:
> 1 | const foo = 1.4 | 0o0;
    |             ^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0o0\`.

Suggestion 1/1: Replace \`| 0o0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1.4);

`;

exports[`prefer-math-trunc > invalid(27): const foo = 1.23 | 0 | 4; 1`] = `

  1 | const foo = 1.23 | 0 | 4;

`;

exports[`prefer-math-trunc > invalid(27): const foo = 1.23 | 0 | 4; 2`] = `

Message:
> 1 | const foo = 1.23 | 0 | 4;
    |             ^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1.23) | 4;

`;

exports[`prefer-math-trunc > invalid(28): const foo = ~~3.9; 1`] = `

  1 | const foo = ~~3.9;

`;

exports[`prefer-math-trunc > invalid(28): const foo = ~~3.9; 2`] = `

Message:
> 1 | const foo = ~~3.9;
    |             ^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(3.9);

`;

exports[`prefer-math-trunc > invalid(29): const foo = ~~111; 1`] = `

  1 | const foo = ~~111;

`;

exports[`prefer-math-trunc > invalid(29): const foo = ~~111; 2`] = `

Message:
> 1 | const foo = ~~111;
    |             ^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(111);

`;

exports[`prefer-math-trunc > invalid(3): const foo = parseInt(String((number)), 10); 1`] = `

  1 | const foo = parseInt(String((number)), 10);

`;

exports[`prefer-math-trunc > invalid(3): const foo = parseInt(String((number)), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String((number)), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc((number));

`;

exports[`prefer-math-trunc > invalid(30): const foo = ~~(1 + 2 / 3.4); 1`] = `

  1 | const foo = ~~(1 + 2 / 3.4);

`;

exports[`prefer-math-trunc > invalid(30): const foo = ~~(1 + 2 / 3.4); 2`] = `

Message:
> 1 | const foo = ~~(1 + 2 / 3.4);
    |             ^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1 + 2 / 3.4);

`;

exports[`prefer-math-trunc > invalid(31): const foo = ~~1 + 2 / 3.4; 1`] = `

  1 | const foo = ~~1 + 2 / 3.4;

`;

exports[`prefer-math-trunc > invalid(31): const foo = ~~1 + 2 / 3.4; 2`] = `

Message:
> 1 | const foo = ~~1 + 2 / 3.4;
    |             ^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(1) + 2 / 3.4;

`;

exports[`prefer-math-trunc > invalid(32): const foo = ~~(0, 1.4); 1`] = `

  1 | const foo = ~~(0, 1.4);

`;

exports[`prefer-math-trunc > invalid(32): const foo = ~~(0, 1.4); 2`] = `

Message:
> 1 | const foo = ~~(0, 1.4);
    |             ^^^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc((0, 1.4));

`;

exports[`prefer-math-trunc > invalid(33): const foo = ~~~10.01; 1`] = `

  1 | const foo = ~~~10.01;

`;

exports[`prefer-math-trunc > invalid(33): const foo = ~~~10.01; 2`] = `

Message:
> 1 | const foo = ~~~10.01;
    |              ^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = ~Math.trunc(10.01);

`;

exports[`prefer-math-trunc > invalid(34): const foo = ~~(~10.01); 1`] = `

  1 | const foo = ~~(~10.01);

`;

exports[`prefer-math-trunc > invalid(34): const foo = ~~(~10.01); 2`] = `

Message:
> 1 | const foo = ~~(~10.01);
    |              ^^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = ~Math.trunc(10.01);

`;

exports[`prefer-math-trunc > invalid(35): const foo = ~(~~10.01); 1`] = `

  1 | const foo = ~(~~10.01);

`;

exports[`prefer-math-trunc > invalid(35): const foo = ~(~~10.01); 2`] = `

Message:
> 1 | const foo = ~(~~10.01);
    |               ^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = ~(Math.trunc(10.01));

`;

exports[`prefer-math-trunc > invalid(36): const foo = ~~-10.01; 1`] = `

  1 | const foo = ~~-10.01;

`;

exports[`prefer-math-trunc > invalid(36): const foo = ~~-10.01; 2`] = `

Message:
> 1 | const foo = ~~-10.01;
    |             ^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(-10.01);

`;

exports[`prefer-math-trunc > invalid(37): const foo = ~~~~10.01; 1`] = `

  1 | const foo = ~~~~10.01;

`;

exports[`prefer-math-trunc > invalid(37): const foo = ~~~~10.01; 2`] = `

Message:
> 1 | const foo = ~~~~10.01;
    |               ^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = ~~Math.trunc(10.01);

`;

exports[`prefer-math-trunc > invalid(38): function foo() {return~~3.9;} 1`] = `

  1 | function foo() {return~~3.9;}

`;

exports[`prefer-math-trunc > invalid(38): function foo() {return~~3.9;} 2`] = `

Message:
> 1 | function foo() {return~~3.9;}
    |                       ^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | function foo() {return Math.trunc(3.9);}

`;

exports[`prefer-math-trunc > invalid(39): const foo = bar >> 0; 1`] = `

  1 | const foo = bar >> 0;

`;

exports[`prefer-math-trunc > invalid(39): const foo = bar >> 0; 2`] = `

Message:
> 1 | const foo = bar >> 0;
    |             ^^^^^^^^ Use \`Math.trunc\` instead of \`>> 0\`.

Suggestion 1/1: Replace \`>> 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(bar);

`;

exports[`prefer-math-trunc > invalid(4): const foo = parseInt(String(number + 1), 10); 1`] = `

  1 | const foo = parseInt(String(number + 1), 10);

`;

exports[`prefer-math-trunc > invalid(4): const foo = parseInt(String(number + 1), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String(number + 1), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(number + 1);

`;

exports[`prefer-math-trunc > invalid(40): const foo = (a + b) >> 0; 1`] = `

  1 | const foo = (a + b) >> 0;

`;

exports[`prefer-math-trunc > invalid(40): const foo = (a + b) >> 0; 2`] = `

Message:
> 1 | const foo = (a + b) >> 0;
    |             ^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`>> 0\`.

Suggestion 1/1: Replace \`>> 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(a + b);

`;

exports[`prefer-math-trunc > invalid(41): const foo = ~~bar!; 1`] = `

  1 | const foo = ~~bar!;

`;

exports[`prefer-math-trunc > invalid(41): const foo = ~~bar!; 2`] = `

Message:
> 1 | const foo = ~~bar!;
    |             ^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(bar!);

`;

exports[`prefer-math-trunc > invalid(42): const foo = ~~(a ? b : c); 1`] = `

  1 | const foo = ~~(a ? b : c);

`;

exports[`prefer-math-trunc > invalid(42): const foo = ~~(a ? b : c); 2`] = `

Message:
> 1 | const foo = ~~(a ? b : c);
    |             ^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(a ? b : c);

`;

exports[`prefer-math-trunc > invalid(43): const foo = bar << 0; 1`] = `

  1 | const foo = bar << 0;

`;

exports[`prefer-math-trunc > invalid(43): const foo = bar << 0; 2`] = `

Message:
> 1 | const foo = bar << 0;
    |             ^^^^^^^^ Use \`Math.trunc\` instead of \`<< 0\`.

Suggestion 1/1: Replace \`<< 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(bar);

`;

exports[`prefer-math-trunc > invalid(44): const foo = bar ^ 0; 1`] = `

  1 | const foo = bar ^ 0;

`;

exports[`prefer-math-trunc > invalid(44): const foo = bar ^ 0; 2`] = `

Message:
> 1 | const foo = bar ^ 0;
    |             ^^^^^^^ Use \`Math.trunc\` instead of \`^ 0\`.

Suggestion 1/1: Replace \`^ 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(bar);

`;

exports[`prefer-math-trunc > invalid(45): function foo() {return.1 ^0;} 1`] = `

  1 | function foo() {return.1 ^0;}

`;

exports[`prefer-math-trunc > invalid(45): function foo() {return.1 ^0;} 2`] = `

Message:
> 1 | function foo() {return.1 ^0;}
    |                       ^^^^^ Use \`Math.trunc\` instead of \`^ 0\`.

Suggestion 1/1: Replace \`^ 0\` with \`Math.trunc\`.:
  1 | function foo() {return Math.trunc(.1);}

`;

exports[`prefer-math-trunc > invalid(46): const foo = {a: {b: {c: 3}}};\nconst bar = a.b.c | 0; 1`] = `

  1 | const foo = {a: {b: {c: 3}}};
  2 | const bar = a.b.c | 0;

`;

exports[`prefer-math-trunc > invalid(46): const foo = {a: {b: {c: 3}}};\nconst bar = a.b.c | 0; 2`] = `

Message:
  1 | const foo = {a: {b: {c: 3}}};
> 2 | const bar = a.b.c | 0;
    |             ^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = {a: {b: {c: 3}}};
  2 | const bar = Math.trunc(a.b.c);

`;

exports[`prefer-math-trunc > invalid(47): const foo = {a: {b: {c: 3}}};\nconst bar = a.b?.c | 0; 1`] = `

  1 | const foo = {a: {b: {c: 3}}};
  2 | const bar = a.b?.c | 0;

`;

exports[`prefer-math-trunc > invalid(47): const foo = {a: {b: {c: 3}}};\nconst bar = a.b?.c | 0; 2`] = `

Message:
  1 | const foo = {a: {b: {c: 3}}};
> 2 | const bar = a.b?.c | 0;
    |             ^^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = {a: {b: {c: 3}}};
  2 | const bar = Math.trunc(a.b?.c);

`;

exports[`prefer-math-trunc > invalid(48): const foo = {a: {b: {c: 3}}};\nconst bar = ~~a.b?.c; 1`] = `

  1 | const foo = {a: {b: {c: 3}}};
  2 | const bar = ~~a.b?.c;

`;

exports[`prefer-math-trunc > invalid(48): const foo = {a: {b: {c: 3}}};\nconst bar = ~~a.b?.c; 2`] = `

Message:
  1 | const foo = {a: {b: {c: 3}}};
> 2 | const bar = ~~a.b?.c;
    |             ^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = {a: {b: {c: 3}}};
  2 | const bar = Math.trunc(a.b?.c);

`;

exports[`prefer-math-trunc > invalid(49): const foo = 3;\nconst bar = foo | 0; 1`] = `

  1 | const foo = 3;
  2 | const bar = foo | 0;

`;

exports[`prefer-math-trunc > invalid(49): const foo = 3;\nconst bar = foo | 0; 2`] = `

Message:
  1 | const foo = 3;
> 2 | const bar = foo | 0;
    |             ^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = 3;
  2 | const bar = Math.trunc(foo);

`;

exports[`prefer-math-trunc > invalid(5): const foo = parseInt(String(number,), 10); 1`] = `

  1 | const foo = parseInt(String(number,), 10);

`;

exports[`prefer-math-trunc > invalid(5): const foo = parseInt(String(number,), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String(number,), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(number,);

`;

exports[`prefer-math-trunc > invalid(50): const foo = 3;\nconst bar = ~~foo; 1`] = `

  1 | const foo = 3;
  2 | const bar = ~~foo;

`;

exports[`prefer-math-trunc > invalid(50): const foo = 3;\nconst bar = ~~foo; 2`] = `

Message:
  1 | const foo = 3;
> 2 | const bar = ~~foo;
    |             ^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = 3;
  2 | const bar = Math.trunc(foo);

`;

exports[`prefer-math-trunc > invalid(51): let foo = 2;\nfoo |= 0; 1`] = `

  1 | let foo = 2;
  2 | foo |= 0;

`;

exports[`prefer-math-trunc > invalid(51): let foo = 2;\nfoo |= 0; 2`] = `

Message:
  1 | let foo = 2;
> 2 | foo |= 0;
    | ^^^^^^^^ Use \`Math.trunc\` instead of \`|= 0\`.

Suggestion 1/1: Replace \`|= 0\` with \`Math.trunc\`.:
  1 | let foo = 2;
  2 | foo = Math.trunc(foo);

`;

exports[`prefer-math-trunc > invalid(52): const foo = {a: {b: 3.4}};\nfoo.a.b |= 0; 1`] = `

  1 | const foo = {a: {b: 3.4}};
  2 | foo.a.b |= 0;

`;

exports[`prefer-math-trunc > invalid(52): const foo = {a: {b: 3.4}};\nfoo.a.b |= 0; 2`] = `

Message:
  1 | const foo = {a: {b: 3.4}};
> 2 | foo.a.b |= 0;
    | ^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`|= 0\`.

Suggestion 1/1: Replace \`|= 0\` with \`Math.trunc\`.:
  1 | const foo = {a: {b: 3.4}};
  2 | foo.a.b = Math.trunc(foo.a.b);

`;

exports[`prefer-math-trunc > invalid(53): const foo = 10.01;\nconst bar = ~~foo; 1`] = `

  1 | const foo = 10.01;
  2 | const bar = ~~foo;

`;

exports[`prefer-math-trunc > invalid(53): const foo = 10.01;\nconst bar = ~~foo; 2`] = `

Message:
  1 | const foo = 10.01;
> 2 | const bar = ~~foo;
    |             ^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = 10.01;
  2 | const bar = Math.trunc(foo);

`;

exports[`prefer-math-trunc > invalid(54): let foo = 10.01;\nfoo >>= 0; 1`] = `

  1 | let foo = 10.01;
  2 | foo >>= 0;

`;

exports[`prefer-math-trunc > invalid(54): let foo = 10.01;\nfoo >>= 0; 2`] = `

Message:
  1 | let foo = 10.01;
> 2 | foo >>= 0;
    | ^^^^^^^^^ Use \`Math.trunc\` instead of \`>>= 0\`.

Suggestion 1/1: Replace \`>>= 0\` with \`Math.trunc\`.:
  1 | let foo = 10.01;
  2 | foo = Math.trunc(foo);

`;

exports[`prefer-math-trunc > invalid(55): let foo = 10.01;\nfoo <<= 0; 1`] = `

  1 | let foo = 10.01;
  2 | foo <<= 0;

`;

exports[`prefer-math-trunc > invalid(55): let foo = 10.01;\nfoo <<= 0; 2`] = `

Message:
  1 | let foo = 10.01;
> 2 | foo <<= 0;
    | ^^^^^^^^^ Use \`Math.trunc\` instead of \`<<= 0\`.

Suggestion 1/1: Replace \`<<= 0\` with \`Math.trunc\`.:
  1 | let foo = 10.01;
  2 | foo = Math.trunc(foo);

`;

exports[`prefer-math-trunc > invalid(56): let foo = 10.01;\nfoo ^= 0; 1`] = `

  1 | let foo = 10.01;
  2 | foo ^= 0;

`;

exports[`prefer-math-trunc > invalid(56): let foo = 10.01;\nfoo ^= 0; 2`] = `

Message:
  1 | let foo = 10.01;
> 2 | foo ^= 0;
    | ^^^^^^^^ Use \`Math.trunc\` instead of \`^= 0\`.

Suggestion 1/1: Replace \`^= 0\` with \`Math.trunc\`.:
  1 | let foo = 10.01;
  2 | foo = Math.trunc(foo);

`;

exports[`prefer-math-trunc > invalid(57): function foo() {return[foo][0] ^= 0;}; 1`] = `

  1 | function foo() {return[foo][0] ^= 0;};

`;

exports[`prefer-math-trunc > invalid(57): function foo() {return[foo][0] ^= 0;}; 2`] = `

Message:
> 1 | function foo() {return[foo][0] ^= 0;};
    |                       ^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`^= 0\`.

Suggestion 1/1: Replace \`^= 0\` with \`Math.trunc\`.:
  1 | function foo() {return[foo][0] = Math.trunc([foo][0]);};

`;

exports[`prefer-math-trunc > invalid(58): const foo = /* first comment */ 3.4 | 0; // A B C 1`] = `

  1 | const foo = /* first comment */ 3.4 | 0; // A B C

`;

exports[`prefer-math-trunc > invalid(58): const foo = /* first comment */ 3.4 | 0; // A B C 2`] = `

Message:
> 1 | const foo = /* first comment */ 3.4 | 0; // A B C
    |                                 ^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = /* first comment */ Math.trunc(3.4); // A B C

`;

exports[`prefer-math-trunc > invalid(59): const foo = /* first comment */ ~~3.4; // A B C 1`] = `

  1 | const foo = /* first comment */ ~~3.4; // A B C

`;

exports[`prefer-math-trunc > invalid(59): const foo = /* first comment */ ~~3.4; // A B C 2`] = `

Message:
> 1 | const foo = /* first comment */ ~~3.4; // A B C
    |                                 ^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = /* first comment */ Math.trunc(3.4); // A B C

`;

exports[`prefer-math-trunc > invalid(6): const foo = parseInt(String(/* comment */ number), 10); 1`] = `

  1 | const foo = parseInt(String(/* comment */ number), 10);

`;

exports[`prefer-math-trunc > invalid(6): const foo = parseInt(String(/* comment */ number), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String(/* comment */ number), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(/* comment */ number);

`;

exports[`prefer-math-trunc > invalid(60): const foo = {a: {b: 3.4}};\nfoo /* Comment 1 */ .a /* Comment 2 */ . /* Comment 3 */ b |= /* Comment 4 */ 0 /* Comment 5 */; 1`] = `

  1 | const foo = {a: {b: 3.4}};
  2 | foo /* Comment 1 */ .a /* Comment 2 */ . /* Comment 3 */ b |= /* Comment 4 */ 0 /* Comment 5 */;

`;

exports[`prefer-math-trunc > invalid(60): const foo = {a: {b: 3.4}};\nfoo /* Comment 1 */ .a /* Comment 2 */ . /* Comment 3 */ b |= /* Comment 4 */ 0 /* Comment 5 */; 2`] = `

Message:
  1 | const foo = {a: {b: 3.4}};
> 2 | foo /* Comment 1 */ .a /* Comment 2 */ . /* Comment 3 */ b |= /* Comment 4 */ 0 /* Comment 5 */;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`|= 0\`.

`;

exports[`prefer-math-trunc > invalid(61): const foo = {a: {b: 3.4}};\nconst bar = /* Comment 1 */ ~~ a /* Comment 3 */ . /* Comment 4 */ b /* Comment 5 */; 1`] = `

  1 | const foo = {a: {b: 3.4}};
  2 | const bar = /* Comment 1 */ ~~ a /* Comment 3 */ . /* Comment 4 */ b /* Comment 5 */;

`;

exports[`prefer-math-trunc > invalid(61): const foo = {a: {b: 3.4}};\nconst bar = /* Comment 1 */ ~~ a /* Comment 3 */ . /* Comment 4 */ b /* Comment 5 */; 2`] = `

Message:
  1 | const foo = {a: {b: 3.4}};
> 2 | const bar = /* Comment 1 */ ~~ a /* Comment 3 */ . /* Comment 4 */ b /* Comment 5 */;
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

`;

exports[`prefer-math-trunc > invalid(62): const foo = /* will keep */ 3.4 /* will remove 1 */ | /* will remove 2 */ 0; 1`] = `

  1 | const foo = /* will keep */ 3.4 /* will remove 1 */ | /* will remove 2 */ 0;

`;

exports[`prefer-math-trunc > invalid(62): const foo = /* will keep */ 3.4 /* will remove 1 */ | /* will remove 2 */ 0; 2`] = `

Message:
> 1 | const foo = /* will keep */ 3.4 /* will remove 1 */ | /* will remove 2 */ 0;
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

`;

exports[`prefer-math-trunc > invalid(63): const foo = /* will keep */ ~ /* will remove 1 */ ~ /* will remove 2 */ 3.4; 1`] = `

  1 | const foo = /* will keep */ ~ /* will remove 1 */ ~ /* will remove 2 */ 3.4;

`;

exports[`prefer-math-trunc > invalid(63): const foo = /* will keep */ ~ /* will remove 1 */ ~ /* will remove 2 */ 3.4; 2`] = `

Message:
> 1 | const foo = /* will keep */ ~ /* will remove 1 */ ~ /* will remove 2 */ 3.4;
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

`;

exports[`prefer-math-trunc > invalid(64): const foo = 3.4; // comment 1\nfoo |= 0; // comment 2 1`] = `

  1 | const foo = 3.4; // comment 1
  2 | foo |= 0; // comment 2

`;

exports[`prefer-math-trunc > invalid(64): const foo = 3.4; // comment 1\nfoo |= 0; // comment 2 2`] = `

Message:
  1 | const foo = 3.4; // comment 1
> 2 | foo |= 0; // comment 2
    | ^^^^^^^^ Use \`Math.trunc\` instead of \`|= 0\`.

Suggestion 1/1: Replace \`|= 0\` with \`Math.trunc\`.:
  1 | const foo = 3.4; // comment 1
  2 | foo = Math.trunc(foo); // comment 2

`;

exports[`prefer-math-trunc > invalid(65): const foo = 3.4; // comment 1\nconst bar = ~~foo; // comment 2 1`] = `

  1 | const foo = 3.4; // comment 1
  2 | const bar = ~~foo; // comment 2

`;

exports[`prefer-math-trunc > invalid(65): const foo = 3.4; // comment 1\nconst bar = ~~foo; // comment 2 2`] = `

Message:
  1 | const foo = 3.4; // comment 1
> 2 | const bar = ~~foo; // comment 2
    |             ^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = 3.4; // comment 1
  2 | const bar = Math.trunc(foo); // comment 2

`;

exports[`prefer-math-trunc > invalid(66): const foo = ~~bar | 0; 1`] = `

  1 | const foo = ~~bar | 0;

`;

exports[`prefer-math-trunc > invalid(66): const foo = ~~bar | 0; 2`] = `

Message:
> 1 | const foo = ~~bar | 0;
    |             ^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(~~bar);

`;

exports[`prefer-math-trunc > invalid(66): const foo = ~~bar | 0; 3`] = `

Message:
> 1 | const foo = ~~bar | 0;
    |             ^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(bar) | 0;

`;

exports[`prefer-math-trunc > invalid(67): const foo = ~~(bar| 0); 1`] = `

  1 | const foo = ~~(bar| 0);

`;

exports[`prefer-math-trunc > invalid(67): const foo = ~~(bar| 0); 2`] = `

Message:
> 1 | const foo = ~~(bar| 0);
    |             ^^^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(bar| 0);

`;

exports[`prefer-math-trunc > invalid(67): const foo = ~~(bar| 0); 3`] = `

Message:
> 1 | const foo = ~~(bar| 0);
    |                ^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = ~~(Math.trunc(bar));

`;

exports[`prefer-math-trunc > invalid(68): const foo = bar | 0 | 0; 1`] = `

  1 | const foo = bar | 0 | 0;

`;

exports[`prefer-math-trunc > invalid(68): const foo = bar | 0 | 0; 2`] = `

Message:
> 1 | const foo = bar | 0 | 0;
    |             ^^^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(bar | 0);

`;

exports[`prefer-math-trunc > invalid(68): const foo = bar | 0 | 0; 3`] = `

Message:
> 1 | const foo = bar | 0 | 0;
    |             ^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(bar) | 0;

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 1`] = `

  1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 10`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |                   ^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = ~~~~((Math.trunc(bar) | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 2`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`~~\`.

Suggestion 1/1: Replace \`~~\` with \`Math.trunc\`.:
  1 | const foo = ~~Math.trunc((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 3`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`^ 0\`.

Suggestion 1/1: Replace \`^ 0\` with \`Math.trunc\`.:
  1 | const foo = ~~~~(Math.trunc((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0));

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 4`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`^ 0\`.

Suggestion 1/1: Replace \`^ 0\` with \`Math.trunc\`.:
  1 | const foo = ~~~~(Math.trunc((bar | 0 | 0) >> 0 >> 0 << 0 << 0) ^0);

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 5`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`<< 0\`.

Suggestion 1/1: Replace \`<< 0\` with \`Math.trunc\`.:
  1 | const foo = ~~~~(Math.trunc((bar | 0 | 0) >> 0 >> 0 << 0) ^ 0 ^0);

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 6`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`<< 0\`.

Suggestion 1/1: Replace \`<< 0\` with \`Math.trunc\`.:
  1 | const foo = ~~~~(Math.trunc((bar | 0 | 0) >> 0 >> 0) << 0 ^ 0 ^0);

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 7`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |                  ^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`>> 0\`.

Suggestion 1/1: Replace \`>> 0\` with \`Math.trunc\`.:
  1 | const foo = ~~~~(Math.trunc((bar | 0 | 0) >> 0) << 0 << 0 ^ 0 ^0);

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 8`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |                  ^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`>> 0\`.

Suggestion 1/1: Replace \`>> 0\` with \`Math.trunc\`.:
  1 | const foo = ~~~~(Math.trunc(bar | 0 | 0) >> 0 << 0 << 0 ^ 0 ^0);

`;

exports[`prefer-math-trunc > invalid(69): const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0); 9`] = `

Message:
> 1 | const foo = ~~~~((bar | 0 | 0) >> 0 >> 0 << 0 << 0 ^ 0 ^0);
    |                   ^^^^^^^^^^^ Use \`Math.trunc\` instead of \`| 0\`.

Suggestion 1/1: Replace \`| 0\` with \`Math.trunc\`.:
  1 | const foo = ~~~~((Math.trunc(bar | 0)) >> 0 >> 0 << 0 << 0 ^ 0 ^0);

`;

exports[`prefer-math-trunc > invalid(7): const foo = parseInt(String(number /* comment */), 10); 1`] = `

  1 | const foo = parseInt(String(number /* comment */), 10);

`;

exports[`prefer-math-trunc > invalid(7): const foo = parseInt(String(number /* comment */), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String(number /* comment */), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

Suggestion 1/1: Replace \`parseInt(String(...), 10)\` with \`Math.trunc\`.:
  1 | const foo = Math.trunc(number /* comment */);

`;

exports[`prefer-math-trunc > invalid(70): const foo = Array.from({length: 10}, (_, index) => (index + 1) + (index + 1) /100);\nlet i = 0;\nwhile (i < foo.length) {\n\tfoo[i++] |= 0;\n}\nconsole.log(foo); 1`] = `

  1 | const foo = Array.from({length: 10}, (_, index) => (index + 1) + (index + 1) /100);
  2 | let i = 0;
  3 | while (i < foo.length) {
  4 | 	foo[i++] |= 0;
  5 | }
  6 | console.log(foo);

`;

exports[`prefer-math-trunc > invalid(70): const foo = Array.from({length: 10}, (_, index) => (index + 1) + (index + 1) /100);\nlet i = 0;\nwhile (i < foo.length) {\n\tfoo[i++] |= 0;\n}\nconsole.log(foo); 2`] = `

Message:
  1 | const foo = Array.from({length: 10}, (_, index) => (index + 1) + (index + 1) /100);
  2 | let i = 0;
  3 | while (i < foo.length) {
> 4 | 	foo[i++] |= 0;
    | 	^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`|= 0\`.
  5 | }
  6 | console.log(foo);

`;

exports[`prefer-math-trunc > invalid(8): const foo = parseInt(/* comment */ String(number), 10); 1`] = `

  1 | const foo = parseInt(/* comment */ String(number), 10);

`;

exports[`prefer-math-trunc > invalid(8): const foo = parseInt(/* comment */ String(number), 10); 2`] = `

Message:
> 1 | const foo = parseInt(/* comment */ String(number), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

`;

exports[`prefer-math-trunc > invalid(9): const foo = parseInt(String /* comment */ (number), 10); 1`] = `

  1 | const foo = parseInt(String /* comment */ (number), 10);

`;

exports[`prefer-math-trunc > invalid(9): const foo = parseInt(String /* comment */ (number), 10); 2`] = `

Message:
> 1 | const foo = parseInt(String /* comment */ (number), 10);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Math.trunc\` instead of \`parseInt(String(...), 10)\`.

`;
